roles/k3s/k3s_yaml/argocd/templates/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.56.0/21,192.168.65.0/24"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argocd.codekernel.co.uk
  tls:
  - hosts:
    - argocd.codekernel.co.uk
    secretName: argocd-secret # do not change, this is provided by Argo CD
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.56.0/21,192.168.65.0/24,10.42.0.0/16"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: grpc.argocd.codekernel.co.uk
  tls:
  - hosts:
    - grpc.argocd.codekernel.co.uk
    secretName: argocd-secret # do not change, this is provided by Argo CD
